--- a/style.css
+++ b/style.css
@@ -20,3 +20,40 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat1{
+    background-image: linear-gradient(to right, #dcad06, #e1b72c, #e6c044, #ebca58, #f0d36c);
+}
+.cat2{
+    background-image: linear-gradient(to right, #dcad06, #e1b72c, #e6c044, #ebca58, #f0d36c);
+}
+.cat3{
+    background-image: linear-gradient(to right, #dcad06, #e1b72c, #e6c044, #ebca58, #f0d36c);
+}
+.catagorise h1{
+    color: white;   
+}
+.catagorise img{
+    width: 100px;
+}
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgrey;
+    border-radius: 10px;
+}
+.card-footer{
+    border-top: none;
+    background-color: white;
+}
+#subscribe{
+    height: 300px;
+}
+#subscribe h6{
+    color: grey;
+}
+footer{
+    text-align: center;
+}
